@@ -1,0 +1,1 @@
+.wp-block-comments-pagination-numbers:only-child{margin-bottom:0!important}
