@@ -1,0 +1,1 @@
+.wp-block-post-terms{display:flex;flex-wrap:wrap}
