@@ -1,1 +1,1 @@
-.pagination{display:flex;list-style-type:none;padding-left:0;margin-bottom:0}.pagination__link{position:relative;display:block;color:var(--wp--preset--color--primary);text-decoration:none;background-color:white;padding:.35rem .75rem;border:1px solid currentColor}.pagination__link:hover{z-index:2;color:var(--wp--preset--color--primary);background-color:var(--wp--preset--color--light);border-color:currentColor}.pagination__link:focus{z-index:3;color:var(--wp--preset--color--primary);background-color:var(--wp--preset--color--light);outline:none;box-shadow:0 0 0 1px var(--wp--preset--color--primary)}.pagination__item:first-child .pagination__link{border-top-left-radius:.25rem;border-bottom-left-radius:.25rem}.pagination__item:not(:first-child) .pagination__link{margin-left:-1px}.pagination__item:last-child .pagination__link{border-top-right-radius:.25rem;border-bottom-right-radius:.25rem}.pagination__item--current .pagination__link{z-index:3;color:white;background-color:var(--wp--preset--color--primary);border-color:var(--wp--preset--color--primary)}.pagination__item--disabled .pagination__link{color:var(--wp--gray);pointer-events:none;background-color:var(--wp--gray-100);border-color:currentColor}
+.pagination{display:flex;list-style-type:none;padding-left:0;margin-bottom:0}.pagination__link{position:relative;display:block;padding:.35rem .75rem;color:var(--wp--preset--color--primary);text-decoration:none;line-height:1.5;background-color:white;border:1px solid currentColor}.pagination__link:hover{z-index:2;color:var(--wp--preset--color--primary);background-color:var(--wp--preset--color--light);border-color:currentColor}.pagination__link:focus{z-index:3;color:var(--wp--preset--color--primary);background-color:var(--wp--preset--color--light);outline:none;box-shadow:0 0 0 1px var(--wp--preset--color--primary)}.pagination__item:first-child .pagination__link{border-top-left-radius:.25rem;border-bottom-left-radius:.25rem}.pagination__item:not(:first-child) .pagination__link{margin-left:-1px}.pagination__item:last-child .pagination__link{border-top-right-radius:.25rem;border-bottom-right-radius:.25rem}.pagination__item--current .pagination__link{z-index:3;color:white;background-color:var(--wp--preset--color--primary);border-color:var(--wp--preset--color--primary)}.pagination__item--disabled .pagination__link{color:var(--wp--gray);pointer-events:none;background-color:var(--wp--gray-100);border-color:currentColor}
