@@ -1,1 +1,1 @@
-/* Separator */hr{height:1px;border:0;opacity:1}.wp-block-separator{margin-left:auto;margin-right:auto}.wp-block-separator.is-style-default,.wp-block-separator:not([class*='is-style-']){max-width:100px}.wp-block-separator.wp-block-separator[class*='is-style-svg-']{position:relative;background-color:transparent!important}.wp-block-separator[class*='is-style-svg-'] svg{display:block;position:absolute;fill:currentColor;width:100%;height:calc(100% + 1px)}/* Admin */.editor-styles-wrapper .wp-block-separator[class*='is-style-svg-']::before{content:'';display:block;position:absolute;background:currentColor;width:100%;height:calc(100% + 1px);-webkit-mask-repeat:no-repeat;-webkit-mask-position:center;-webkit-mask-size:100%}
+/* Separator */hr{height:1px;border:0;opacity:1}.wp-block-separator{margin-left:auto;margin-right:auto}.wp-block-separator.is-style-default,.wp-block-separator:not([class*='is-style-']){max-width:100px}.wp-block-separator.wp-block-separator[class*='is-style-svg-']{position:relative;background-color:transparent!important;height:calc(var(--wp--separator-height) * var(--wp--separator-ratio,.7));min-height:initial}.wp-block-separator[class*='is-style-svg-'] svg{display:block;position:absolute;fill:currentColor;width:100%;height:calc(100% + 1px)}@media (min-width:992px){.wp-block-separator.wp-block-separator[class*='is-style-svg-']{height:var(--wp--separator-height)}}/* Admin */.editor-styles-wrapper .wp-block-separator[class*='is-style-svg-']::before{content:'';display:block;position:absolute;background:currentColor;width:100%;height:calc(100% + 1px);-webkit-mask-repeat:no-repeat;-webkit-mask-position:center;-webkit-mask-size:100%}
